--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         overflow: hidden;
         margin-bottom: 25px;
         backdrop-filter: blur(6px);
+        text-align: center;
     }
     .calendar header {
         display: flex; justify-content: space-between; align-items: center;
@@ -45,11 +46,14 @@
         font-weight: bold; transition: 0.3s;
     }
     .calendar header button:hover { background: #eee; }
+    .today-info {
+        font-size: 14px; color: #333; margin: 10px 0; font-weight: 600;
+    }
     .calendar table {
         width: 100%;
         border-collapse: collapse;
         text-align: center;
-        table-layout: fixed; /* Semua kolom seragam */
+        table-layout: fixed;
     }
     .calendar thead { background: #f4f4f4; }
     .calendar th, .calendar td {
@@ -128,6 +132,7 @@
         <h2 id="month-year"></h2>
         <button id="next">&#10095;</button>
     </header>
+    <div class="today-info" id="today-info"></div>
     <table>
         <thead>
             <tr>
@@ -172,6 +177,7 @@
     const calendarBody = document.getElementById('calendar-body');
     const prevBtn = document.getElementById('prev');
     const nextBtn = document.getElementById('next');
+    const todayInfo = document.getElementById('today-info');
     const noteModal = document.getElementById('noteModal');
     const selectedDateEl = document.getElementById('selected-date');
     const noteText = document.getElementById('noteText');
@@ -179,6 +185,7 @@
     const closeModalBtn = document.getElementById('closeModal');
 
     const months = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
+    const days = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
 
     const holidays = {
         "1-1": "Tahun Baru Masehi",
@@ -194,6 +201,11 @@
     let selectedDate = null;
 
     let notes = JSON.parse(localStorage.getItem("calendarNotes")) || {};
+
+    function showToday() {
+        let today = new Date();
+        todayInfo.textContent = `Hari ini: ${days[today.getDay()]}, ${today.getDate()} ${months[today.getMonth()]} ${today.getFullYear()}`;
+    }
 
     function generateCalendar(month, year) {
         calendarBody.innerHTML = "";
@@ -282,6 +294,7 @@
         }
     });
 
+    showToday();
     generateCalendar(currentMonth, currentYear);
 </script>
 </body>
